# fan_control

./: CMakeLists.txt  README.md  main.c
src/: main.c
